# NoteWiki

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
apps/cli_viewer/: cli_viewer.hpp  main.cpp
apps/imgui_viewer/: events.hpp  imgui_viewer.hpp  main.cpp  renderer.hpp  renderer_ctx.hpp  viewstate.hpp
include/: note.hpp
include/utilities/: color.h  logger.h  options.h  parser.h  thread_id.h
src/: main.cpp
tests/core/: test_note.cpp
tests/utilities/: test_color.cpp  test_logger.cpp  test_logger_fixture.cpp
